syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message MyMessage {
  int64 id = 1;
  int64 endValue = 30;
}

message Empty {}

service RemoteDBService {
  rpc createListOfValue(MyMessage) returns (MyMessage);
  rpc getValue(Empty) returns (stream MyMessage);
}
